--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "engines": {
-    "node": "^14.15.5"
+    "node": "14.15.5"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
