--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.3",
-    "express": "^4.16.3",
-    "if-env": "^1.0.4",
-    "mongoose": "^5.3.16"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
