--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
-  "engines": {
-    "node": "14.15.5"
-  },
+ 
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.18.0",
-    "node": "^15.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "serve": "^11.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
