--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.16.3",
