date formatting and card formatting

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "if-env": "^1.0.4",
     "materialize": "^1.0.0",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.29.1",
     "mongoose": "^5.3.16",
     "morgan": "^1.10.0",
     "node": "^15.12.0",
