--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "and": "0.0.3",
     "axios": "^0.18.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.5.2",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.3"
