--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.0",
@@ -42,8 +40,6 @@
     "morgan": "^1.10.0",
     "node": "^15.12.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "react-bootstrap": "^1.5.2",
-    "react-chartjs-2": "^2.11.1"
+    "passport-local": "^1.0.0"
   }
 }
